initial SNPRC EHR test

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -13,6 +13,7 @@ function importFile(config) {
             moduleResource: config.moduleResource
         }),
         method: 'POST',
+        timeout: 100000,
         success: LABKEY.Utils.getCallbackWrapper(config.success, config.scope),
         failure: LABKEY.Utils.getCallbackWrapper(config.failure, config.scope, true),
         jsonData: o,
@@ -42,28 +43,37 @@ Ext4.onReady(function(){
         },
 
         getItems: function(){
+            var tableItems = [];
             var items = [{
+                layout: 'hbox',
                 border: false,
-                layout: {
-                    type: 'table',
-                    columns: 2
-                },
-                defaults: {
-                    style: 'margin: 2px;'
-                },
-                items: []
-            },{
-                border: false,
-                itemId: 'ehr_msg'
+                items: [{
+                    border: false,
+                    layout: {
+                        type: 'table',
+                        columns: 2
+                    },
+                    defaults: {
+                        style: 'margin: 2px;'
+                    },
+                    items: tableItems
+                },{
+                  border: false,
+                  itemId: 'ehr_msg',
+                  xtype: 'box',
+                  width: "400px",
+                  height: "600px",
+                  html: '<div id="msgbox"></div>'
+                }]
             }];
 
             Ext4.each(this.tables, function(table){
-                items[0].items.push({
+                tableItems.push({
                     xtype: 'button',
                     text: 'Populate ' + table.label,
                     scope: this,
                     handler: function(){
-                        this.down('#ehr_msg').update('');
+                        document.getElementById('msgbox').innerHTML = '<div>Populating ' + table.queryName + '...</div>';
                         if (table.populateFn == 'populateFromFile') {
                           this.populateFromFile.call(this, table.schemaName, table.queryName);
                         } else {
@@ -72,37 +82,39 @@ Ext4.onReady(function(){
                     }
                 });
 
-                items[0].items.push({
+                tableItems.push({
                     xtype: 'button',
                     text: 'Delete Data From ' + table.label,
                     scope: this,
                     handler: function(){
-                        this.down('#ehr_msg').update('');
+                        document.getElementById('msgbox').innerHTML = '<div>Deleting ' + table.label + '...</div>';
                         this.deleteHandler(table);
                     }
                 });
             }, this);
 
-            items[0].items.push({
+            tableItems.push({
                 xtype: 'button',
                 text: 'Populate All',
                 scope: this,
                 handler: function(){
-                    this.down('#ehr_msg').update('');
+                    document.getElementById('msgbox').innerHTML = '';
                     Ext4.each(this.tables, function(table){
                         if (!table.doSkip) {
+                            document.getElementById('msgbox').innerHTML += '<div>Populating ' + table.queryName + '...</div>';
                             if (table.populateFn == 'populateFromFile') {
                               this.populateFromFile.call(this, table.schemaName, table.queryName);
                             } else {
                               this[table.populateFn]();
                             }
                         } else {
+                            document.getElementById('msgbox').innerHTML += '<div>Skipping ' + table.label + '</div>';
                             console.log('skipping: ' + table.label)
                         }
                     }, this);
                 }
             });
-            items[0].items.push({
+            tableItems.push({
                 xtype: 'button',
                 text: 'Delete All',
                 scope: this,
@@ -110,10 +122,13 @@ Ext4.onReady(function(){
                     this.pendingDeletes = 0;
 
                     Ext4.each(this.tables, function(table){
-                        if (!table.doSkip)
+                        if (!table.doSkip) {
+                            document.getElementById('msgbox').innerHTML += '<div>Deleting ' + table.label + '...</div>';
                             this.deleteHandler(table);
-                        else
+                        } else {
+                            document.getElementById('msgbox').innerHTML += '<div>Skipping ' + table.label + '</div>';
                             console.log('skipping: ' + table.label);
+                        }
                     }, this);
                 }
             });
@@ -158,33 +173,30 @@ Ext4.onReady(function(){
             queryName: 'serologyMethod',
             pk: 'rowid'
         },{
-//            // XXX: table no longer exists?
-//            label: 'iSTAT Tests',
-//            populateFn: 'populateiStatTests',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'istat_tests',
-//            pk: 'rowid'
-//        },{
+            label: 'iSTAT Tests',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'istat_tests',
+            pk: 'rowid'
+        },{
 //            label: 'Anesthesia Tests',
 //            populateFn: 'populateFromFile',
 //            schemaName: 'ehr_lookups',
 //            queryName: 'anesthesia_tests',
 //            pk: 'rowid'
 //        },{
-//            // XXX: table no longer exists?
-//            label: 'Urinalysis Qual Results',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'urinalysis_qualitative_results',
-//            pk: 'rowid'
-//        },{
-//            // XXX: table no longer exists?
-//            label: 'Birth Type',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'birth_type',
-//            pk: 'rowid'
-//        },{
+            label: 'Urinalysis Qual Results',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'urinalysis_qualitative_results',
+            pk: 'rowid'
+        },{
+            label: 'Birth Type',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'birth_type',
+            pk: 'rowid'
+        },{
             label: 'Birth Condition',
             populateFn: 'populateFromFile',
             schemaName: 'onprc_ehr',
@@ -234,48 +246,42 @@ Ext4.onReady(function(){
             queryName: 'snomed_subset_codes',
             pk: 'rowid'
         },{
-//            // XXX: table no longer exists?
-//            label: 'Parasitology Methods',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'parasitology_method',
-//            pk: 'rowid'
-//        },{
-//            // XXX: table no longer exists?
-//            label: 'Chemistry Methods',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'chemistry_method',
-//            pk: 'rowid'
-//        },{
-//            // XXX: table no longer exists?
-//            label: 'Urinalysis Methods',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'urinalysis_method',
-//            pk: 'rowid'
-//        },{
-//            // XXX: table no longer exists?
-//            label: 'Hematology Methods',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'hematology_method',
-//            pk: 'rowid'
-//        },{
-//            // XXX: table no longer exists?
-//            label: 'Clinpath Sampletype',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'clinpath_sampletype',
-//            pk: 'rowid'
-//        },{
-//            // XXX: table no longer exists?
-//            label: 'Drug Category',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'drug_categories',
-//            pk: 'rowid'
-//        },{
+            label: 'Parasitology Methods',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'parasitology_method',
+            pk: 'rowid'
+        },{
+            label: 'Chemistry Methods',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'chemistry_method',
+            pk: 'rowid'
+        },{
+            label: 'Urinalysis Methods',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'urinalysis_method',
+            pk: 'rowid'
+        },{
+            label: 'Hematology Methods',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'hematology_method',
+            pk: 'rowid'
+        },{
+            label: 'Clinpath Sampletype',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'clinpath_sampletype',
+            pk: 'rowid'
+        },{
+            label: 'Drug Category',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'drug_categories',
+            pk: 'rowid'
+        },{
             label: 'Blood Sample Type',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
@@ -588,13 +594,12 @@ Ext4.onReady(function(){
             queryName: 'routes',
             pk: 'route'
         },{
-//            // XXX: table no longer exists?
-//            label: 'Problem List Category',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'problem_list_category',
-//            pk: 'rowid'
-//        },{
+            label: 'Problem List Category',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'problem_list_category',
+            pk: 'rowid'
+        },{
             label: 'Problem List Sub-Category',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
@@ -619,20 +624,18 @@ Ext4.onReady(function(){
             queryName: 'normal_abnormal',
             pk: 'state'
         },{
-//            // XXX: table no longer exists?
-//            label: 'Clinpath Types',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'clinpath_types',
-//            pk: 'rowid'
-//        },{
-//            // XXX: table no longer exists?
-//            label: 'Clinremarks Category',
-//            populateFn: 'populateFromFile',
-//            schemaName: 'ehr_lookups',
-//            queryName: 'clinremarks_category',
-//            pk: 'rowid'
-//        },{
+            label: 'Clinpath Types',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'clinpath_types',
+            pk: 'rowid'
+        },{
+            label: 'Clinremarks Category',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'clinremarks_category',
+            pk: 'rowid'
+        },{
             label: 'Age Class',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
@@ -692,7 +695,12 @@ Ext4.onReady(function(){
             LABKEY.Ajax.request({
                 url: LABKEY.ActionURL.buildURL("query", "truncateTable.api"),
                 success: LABKEY.Utils.getCallbackWrapper(this.onDeleteSuccess, this),
-                failure: LDK.Utils.getErrorCallback(),
+                failure: LDK.Utils.getErrorCallback({
+                    callback: function (resp) {
+                        document.getElementById('msgbox').innerHTML += '<div class="labkey-error">Error loading data: ' + resp.errorMsg + '</div>';
+                    },
+                    scope: this
+                }),
                 jsonData: {
                     schemaName: schemaName,
                     queryName: queryName
@@ -708,11 +716,12 @@ Ext4.onReady(function(){
             console.log('success deleting ' + count + ' rows: ' + (data ? data.queryName : ' no query'));
             this.pendingDeletes--;
             if (this.pendingDeletes==0){
-                this.down('#ehr_msg').update('Delete Complete');
+                document.getElementById('msgbox').innerHTML += '<div>Delete Complete</div>';
             }
         },
 
         populateFromFile: function (schemaName, queryName) {
+            console.log("Populating " + schemaName + "." + queryName + "...");
             this.pendingInserts++;
             //records for task forms:
             var config = {
@@ -1834,7 +1843,7 @@ Ext4.onReady(function(){
             };
 
             var origSuccess = config.success;
-            config.success = function(results, xhr, config) {
+            config.success = function(results, xhr, c) {
                 console.log('lookup set records inserted');
 
                 LABKEY.Ajax.request({
@@ -1846,7 +1855,7 @@ Ext4.onReady(function(){
                     scope: this,
                     success: function(){
                         console.log('cleared caches');
-                        origSuccess.call(config.scope, results, xhr, config);
+                        origSuccess.call(config.scope, results, xhr, c);
                     },
                     failure: function(){
                         console.error(arguments);
@@ -1882,7 +1891,7 @@ Ext4.onReady(function(){
                 console.log('Success ' + (result.rowCount !== undefined ? result.rowCount + ' rows: ' : ': ') + queryName);
 
                 if (this.pendingInserts == 0) {
-                    this.down('#ehr_msg').update('Populate Complete');
+                    document.getElementById('msgbox').innerHTML += '<div>Populate Complete</div>';
                 }
             }
         },
@@ -1894,10 +1903,12 @@ Ext4.onReady(function(){
             console.log('Error Loading Data: '+ queryName);
             console.log(result);
 
+            document.getElementById('msgbox').innerHTML += '<div class="labkey-error">ERROR: ' + queryName + ': ' + result.exception + '</div>';
+
             if (this.pendingInserts==0){
-                this.down('#ehr_msg').update('Populate Complete');
+                document.getElementById('msgbox').innerHTML += '<div>Populate Complete</div>';
             }
-        }        
+        }
     });
     
     Ext4.create('ONPRC_EHR.panel.PopulateDataPanel').render(webpart.wrapperDivId);
