--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -342,6 +342,12 @@ Ext4.onReady(function(){
             queryName: 'labwork_services',
             pk: 'servicename'
         },{
+            label: 'Lab Tests',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'lab_tests',
+            pk: 'rowid'
+        },{
             label: 'Labwork Panels',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
