Allow bulk-caching of animals not thought to be alive for death ETL perf
Increase max batch size for better throughput

--- a/snprc_ehr/resources/views/ehrAdmin.html
+++ b/snprc_ehr/resources/views/ehrAdmin.html
@@ -22,6 +22,7 @@ Ext4.onReady(function (){
                 {name: 'Verify Dataset Columns', url: '<%=contextPath%>/onprc_ehr<%=containerPath%>/validateDataSetCols.view?'},
                 {name: 'Verify EHR Schema Indexes Are Compressed', url: '<%=contextPath%>/ehr<%=containerPath%>/ensureEHRSchemaIndexes.view?'},
                 {name: 'Cache Demographics On All Living Animals', url: '<%=contextPath%>/ehr<%=containerPath%>/cacheLivingAnimals.view?'},
+                {name: 'Cache Demographics On All Animals', url: '<%=contextPath%>/ehr<%=containerPath%>/cacheLivingAnimals.view?includeAll=true'},
                 {name: 'Prime/Refresh Data Entry Cache', url: '<%=contextPath%>/ehr<%=containerPath%>/primeDataEntryCache.view?'}
             ]
         },{
