Make EHR populate message box scrollable

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -62,7 +62,7 @@ Ext4.onReady(function(){
                   itemId: 'ehr_msg',
                   xtype: 'box',
                   width: "400px",
-                  height: "600px",
+                  style: {overflow: "scroll"},
                   html: '<div id="msgbox"></div>'
                 }]
             }];
