--- a/snprc_ehr/resources/views/help.webpart.xml
+++ b/snprc_ehr/resources/views/help.webpart.xml
@@ -1,4 +1,4 @@
-<webpart xmlns="http://labkey.org/data/xml/webpart" title="EHR Help">
+<webpart xmlns="http://labkey.org/data/xml/webpart" title="SNPRC EHR Help">
    <view name="help"/>
    <locations>
 		<location name="right"/>
