snprc_ehr - added id_type to ehr_lookups and id_history dataset

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -137,6 +137,12 @@ Ext4.onReady(function(){
         },
 
         tables: [{
+            label: 'Id Types',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'id_type',
+            pk: 'rowid'
+        },{
             label: 'rooms',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
