snprc_ehr - Added TB and blood ETLs; updated source queries.

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -137,6 +137,12 @@ Ext4.onReady(function(){
         },
 
         tables: [{
+            label: 'TB sites',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'tb_site',
+            pk: 'value'
+        },{
             label: 'Id Types',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
