typo in snprc colonyOverviewPanel

--- a/snprc_ehr/resources/views/colonyOverview.html
+++ b/snprc_ehr/resources/views/colonyOverview.html
@@ -2,7 +2,7 @@
 
     Ext4.onReady(function(){
         var webpart = <%=webpartContext%>;
-        Ext4.create('SNPRC_EHR.panel.ColonyOverviewPanel', {
+        Ext4.create('EHR.panel.ColonyOverviewPanel', {
             getTabs: function(){
                 return [{
                     title: 'Population Composition',
